inmplemented 'import palette' function, a major victory

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>LeviSprite PRO</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
+    <!--script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script-->
 
-    
+    <script type="text/javascript" src="/Users/levicoder/Documents/Documents - Levi’s MacBook Air/p5.js"></script>
 
     <script type="text/javascript" src="javascript/popups.js"></script>
     <script type="text/javascript" src="javascript/canvas.js"></script>
